todto calls half done
