# components/backend/src/main/resources/restaurant-api-doc.yaml
@@ -10,6 +10,7 @@ externalDocs:
 servers:
   - url: http://localhost:8084
 tags:
+  - name: auth
   - name: user
   - name: employee
   - name: customer
@@ -20,10 +21,10 @@ tags:
   - name: menu
 
 paths:
-  /login:
+  /auth/login:
     post:
       tags: 
-        - user
+        - auth
       summary: User login
       operationId: login
       requestBody:
@@ -43,10 +44,10 @@ paths:
           description: Unauthorized
         '400':
           description: Invalid request
-  /logout:
+  /auth/logout:
     get:
       tags:
-        - user
+        - auth
       summary: Logs out current logged in user
       description: ''
       operationId: logout
@@ -55,10 +56,10 @@ paths:
       responses:
         default:
           description: successful operation
-  /password-reset:
+  /auth/password-reset:
     patch:
       tags: 
-        - user
+        - auth
       summary: Password reset
       operationId: passwordReset
       security:
@@ -234,9 +235,9 @@ paths:
           description: User successfully registered
         '400':
           description: Invalid request
-  /customer/{customer-id}/booking:
+  /customer/{userId}/booking:
     parameters:
-      - name: customer-id
+      - name: userId
         in: path
         schema: { type: string }
         required: true
@@ -271,7 +272,7 @@ paths:
                       
         '405':
           description: Invalid input
-  /invoice/{orderId}:
+  /customer/{userId}/invoice/{orderId}:
     parameters:
       - name: orderId
         in: path
@@ -280,6 +281,13 @@ paths:
         schema:
           type: string
           example: ObjectId('6544cd596955fe0a1c04fba9')
+      - name: userId
+        in: path
+        description: The ID of the user
+        required: true
+        schema:
+          type: string
+          example: "ObjectId('6544cd596955fe0a1c04fba9')"
     get:
       tags:
         - customer
@@ -553,7 +561,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Order'
+                  $ref: '#/components/schemas/TableOrder'
         '405':
           description: Invalid input
   /table-order/{table-number}:
@@ -576,7 +584,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/TableOrder'
         '405':
           description: Invalid input
 
@@ -604,7 +612,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/TableOrder'
         '405':
           description: Invalid input
   
@@ -637,9 +645,9 @@ paths:
                   $ref: '#/components/schemas/CustomerOrder'
         '405':
           description: Invalid input
-  /customer-order/{customer-id}:
+  /customer-order/{userId}:
     parameters:
-      - name: customer-id
+      - name: userId
         in: path
         schema: { type: string }
         required: true
@@ -926,10 +934,13 @@ components:
           enum: [pending, accepted]
         peopleCount:
           type: integer
+        note:
+          type: string
+          example: "az egyik fő egy kisbaba"
     NewBooking:
       required:
         - table-number
-        - customer-id
+        - user-id
         - startingDate
         - endingDate
         - peopleCount
@@ -938,7 +949,7 @@ components:
         table-number:
           type: integer
           example: 3
-        customer-id:
+        user-id:
           type: string
           example: 6544cd596955fe0a1c04fba9
         startingDate:
@@ -949,6 +960,9 @@ components:
           format: date-time
         peopleCount:
           type: integer
+        note:
+          type: string
+          example: "az egyik fő egy kisbaba"
     Food:
       required:
         - name
@@ -1059,6 +1073,14 @@ components:
           $ref: '#/components/schemas/User'
         order: 
           $ref: '#/components/schemas/Order'
+    TableOrder:
+      type: object
+      properties:
+        table: 
+          $ref: '#/components/schemas/Table'
+        order: 
+          $ref: '#/components/schemas/Order'
+
     FoodStockItem:
       required:
         - name
